--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -50,6 +50,7 @@ patches:
   - "@./patches/global/machine-network.yaml"
   - "@./patches/global/machine-sysctls.yaml"
   - "@./patches/global/machine-time.yaml"
+  - "@./patches/global/machine-openebs.yaml"
 
 # Controller patches
 controlPlane:
