--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./controlplaneio.yaml
   - ./coredns.yaml
   - ./external-dns.yaml
+  - ./harbor.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
   - ./k8s-gateway.yaml
