--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -14,5 +14,6 @@ resources:
   - ./k8s-gateway.yaml
   - ./metrics-server.yaml
   - ./openebs.yaml
+  - ./prometheus-community.yaml
   - ./spegel.yaml
   - ./stakater.yaml
