--- a/kubernetes/apps/network/nginx/ks.yaml
+++ b/kubernetes/apps/network/nginx/ks.yaml
@@ -14,7 +14,7 @@ spec:
       namespace: cert-manager
   interval: 30m
   path: ./kubernetes/apps/network/nginx/internal
-  prune: true
+  prune: false # restore to true
   sourceRef:
     kind: GitRepository
     name: flux-system
